--- a/spark/spark-streaming/pom.xml
+++ b/spark/spark-streaming/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>spark</artifactId>
         <groupId>com.peng</groupId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -17,13 +18,13 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-streaming_2.11</artifactId>
-            <version>${spark.version}</version>
+            <version>2.3.3</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-streaming-kafka-0-10_2.11</artifactId>
-            <version>${spark.version}</version>
+            <version>2.3.3</version>
         </dependency>
     </dependencies>
 
