--- a/spark/pom.xml
+++ b/spark/pom.xml
@@ -24,6 +24,7 @@
         <module>spark-core</module>
         <module>spark-sql</module>
         <module>tuning</module>
+        <module>spark-streaming</module>
     </modules>
 
     <!-- 声明并引入公有的依赖 -->
