--- a/spark/spark-streaming/pom.xml
+++ b/spark/spark-streaming/pom.xml
@@ -20,11 +20,15 @@
             <artifactId>spark-streaming_2.11</artifactId>
             <version>2.3.3</version>
         </dependency>
-
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-streaming-kafka-0-10_2.11</artifactId>
             <version>2.3.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-streaming-flume_2.11</artifactId>
+            <version>1.5.1</version>
         </dependency>
     </dependencies>
 
