--- a/spark/spark-streaming/pom.xml
+++ b/spark/spark-streaming/pom.xml
@@ -16,9 +16,19 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.5.2</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-streaming_2.11</artifactId>
             <version>2.3.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.scalikejdbc</groupId>
+            <artifactId>scalikejdbc_2.11</artifactId>
+            <version>3.1.0</version>
         </dependency>
     </dependencies>
 </project>
