--- a/spark/pom.xml
+++ b/spark/pom.xml
@@ -30,6 +30,7 @@
         <module>spark-sql</module>
         <module>spark-streaming</module>
         <module>tuning</module>
+        <module>kafka</module>
     </modules>
 
     <!-- 声明并引入公有的依赖 -->
