--- a/spark/pom.xml
+++ b/spark/pom.xml
@@ -25,7 +25,7 @@
     </properties>
 
     <modules>
-        <module>base</module>
+        <module>scala-base</module>
         <module>spark-core</module>
         <module>spark-sql</module>
         <module>spark-streaming</module>
