--- a/spark/spark-core/pom.xml
+++ b/spark/spark-core/pom.xml
@@ -15,6 +15,7 @@
     <packaging>jar</packaging>
 
     <dependencies>
+        <!-- hbase包的netty会和spark-core冲突-->
         <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-client</artifactId>
