add tunning module

--- a/hadoop/pom.xml
+++ b/hadoop/pom.xml
@@ -19,6 +19,7 @@
     <modules>
         <module>hdfs</module>
         <module>mapreduce</module>
+        <module>tunning</module>
     </modules>
 
     <dependencies>
