update flink demo

--- a/flink/pom.xml
+++ b/flink/pom.xml
@@ -54,6 +54,11 @@
             <artifactId>joda-time</artifactId>
             <version>2.7</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.bahir</groupId>
+            <artifactId>flink-connector-redis_2.11</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
