--- a/example/data-warehouse-spark/pom.xml
+++ b/example/data-warehouse-spark/pom.xml
@@ -9,6 +9,7 @@
         <module>analyse</module>
         <module>commons</module>
         <module>mock</module>
+        <module>advers-stat</module>
     </modules>
     <packaging>pom</packaging>
 
