--- a/spark/spark-streaming/pom.xml
+++ b/spark/spark-streaming/pom.xml
@@ -30,5 +30,21 @@
             <artifactId>scalikejdbc_2.11</artifactId>
             <version>3.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-sql_2.11</artifactId>
+            <version>2.3.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-streaming-kafka-0-10_2.11</artifactId>
+            <version>2.3.3</version>
+        </dependency>
+<!--        0.8和0.10版本会冲突,要使用其中一个就必须注释掉一个-->
+<!--        <dependency>-->
+<!--            <groupId>org.apache.spark</groupId>-->
+<!--            <artifactId>spark-streaming-kafka-0-8_2.11</artifactId>-->
+<!--            <version>2.3.3</version>-->
+<!--        </dependency>-->
     </dependencies>
 </project>
