--- a/example/data-warehouse-spark/commons/src/main/resources/commerce.properties
+++ b/example/data-warehouse-spark/commons/src/main/resources/commerce.properties
@@ -33,5 +33,5 @@ task.params.json={startDate:"2018-02-01", \
   categoryIds:"", \
   targetPageFlow:"1,2,3,4,5,6,7"}
 
-kafka.broker.list=hadoop-senior01.itguigu.com:9092
+kafka.broker.list=node1:9092
 kafka.topics=AdRealTimeLog
