--- a/example/app-log-analysis-spark/tomcat-servelet/log-collector-web/pom.xml
+++ b/example/app-log-analysis-spark/tomcat-servelet/log-collector-web/pom.xml
@@ -15,6 +15,11 @@
             <version>4.11</version>
         </dependency>
         <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
             <version>4.3.5.RELEASE</version>
